Added Derived Types

--- a/src/Linq2OData.Generator/Templates/Types/TypeTemplate.tt
+++ b/src/Linq2OData.Generator/Templates/Types/TypeTemplate.tt
@@ -4,9 +4,11 @@
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
 using Linq2OData.Client;
+using System.Text.Json.Serialization;
 
-namespace <#= namespaceName #>;
+namespace <#= fullNamspace #>;
 
+<#= GetDerivedAttributes() #>
 public partial class <#= entityType.Name #> <#= BaseTypeDerived #>
 {
 <# foreach (var property in entityType.Properties) { #>
