--- a/src/Linq2OData.Generator/Templates/Client/ClientEndpointTemplate.tt
+++ b/src/Linq2OData.Generator/Templates/Client/ClientEndpointTemplate.tt
@@ -3,7 +3,7 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
-using Linq2OData.Client;
+using Linq2OData.Core;
 namespace <#= endpointNamespace #>;
 
 public class <#= metadata.EndpointName #>(ODataClient odataClient) 
