--- a/src/Linq2OData.Generator/Templates/Input/InputTemplate.tt
+++ b/src/Linq2OData.Generator/Templates/Input/InputTemplate.tt
@@ -4,7 +4,7 @@
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
 
-using Linq2OData.Client;
+using Linq2OData.Core;
 
 namespace <#= namespaceName #>;
 
