--- a/docs/Linq2OData.Docs/_Imports.razor
+++ b/docs/Linq2OData.Docs/_Imports.razor
@@ -8,6 +8,6 @@
 @using Microsoft.JSInterop
 @using Linq2OData.Docs
 @using Linq2OData.Docs.Layout
-
+@using Linq2OData.Docs.Components.Shared
 
 @using TabBlazor
