--- a/src/Linq2OData.Generator/Templates/Client/ClientTemplate.tt
+++ b/src/Linq2OData.Generator/Templates/Client/ClientTemplate.tt
@@ -4,7 +4,8 @@
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
 
-
+using Linq2OData.Core;
+using Linq2OData.Core.Builders;
 namespace <#= clientNamespace #>;
 
 public class <#= clientName #> 
@@ -15,18 +16,10 @@ public class <#= clientName #>
     public <#= clientName #>(HttpClient httpClient) 
     {
          odataClient = new Linq2OData.Core.ODataClient(httpClient, <#= GetODataVersionParameter() #>); 
-          <# foreach (var metadata in metadataList) { #>
-    <#= metadata.Namespace #> = new <#= metadata.NamespaceEndpointName #>(odataClient);
-<# } #>
-       
     }
 
-     public ForBuilder<T> For<T>() where T : IODataEntitySet, new() //TODO: Add Interfaces specific to this service
-     {
-        return new ForBuilder<T>(odataClient);
-     }
-
-    <# foreach (var metadata in metadataList) { #>
-    public <#= metadata.NamespaceEndpointName #> <#= metadata.Namespace #> { get; set; }
-<# } #>
+    public ForBuilder<T> For<T>() where T : IODataEntitySet, new() //TODO: Add Interfaces specific to this service
+    {
+         return new ForBuilder<T>(odataClient);
+    }
 }
