First stab at projections

--- a/src/Linq2OData.Generator/Templates/Types/TypeTemplate.tt
+++ b/src/Linq2OData.Generator/Templates/Types/TypeTemplate.tt
@@ -13,12 +13,12 @@ namespace <#= fullNamspace #>;
 public partial class <#= entityType.Name #> <#= BaseTypeAndInterface #>
 {
 <# foreach (var property in entityType.Properties) { #>
-    [ODataMember("<#= property.Name #>")]
+    <#= property.ODataAttributeString #>
     public <#= property.CSharpType #> <#= property.Name #> { get; set; }
 <# } #>
 
 <# foreach (var navigation in entityType.Navigations) { #>
-    [ODataMember("<#= navigation.Name #>")]
+    [ODataMember("<#= navigation.Name #>", true)]
     public <#= navigation.CSharpProperty #> <#= navigation.Name #> { get; set; }
 <# } #>
 
